# langth

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  wrangler.json  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx
app/v2/: page.tsx
backend/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  pipeline.py
backend/app/agents/guardrails/: __init__.py  child_safety.py
backend/app/agents/tools/: __init__.py  diversify.py  generate.py  score.py  validate.py
backend/app/api/: __init__.py
backend/app/api/v2/: __init__.py  router.py  schemas.py
backend/app/data/: english_minimal_pairs.json  forbidden_words.json  korean_frequency_sample.json  korean_minimal_pairs.json
backend/app/services/corpus/: __init__.py  korean_freq.py
backend/app/services/lexical/: __init__.py  core_vocabulary.py  scorer.py  vocabulary.py
backend/app/services/phoneme/: __init__.py  english.py  korean.py
backend/app/services/phonology/: __init__.py  rules.py
backend/app/services/prompt/: __init__.py  builder.py
backend/tests/: test_api_v2.py  test_diversify_tool.py  test_generate_tool.py  test_guardrails.py  test_phoneme_english.py  test_phoneme_korean.py  test_pipeline.py  test_score_tool.py  test_validate_tool.py
components/: EditModal.tsx  Header.tsx  Roulette.tsx  SentenceList.tsx  SettingsPanel.tsx
docs/: V2_GENERATION_FLOW.md
hooks/: useGenerateV2.ts
lib/: openai.ts  utils.ts
lib/db/: sessions.ts
tests/: e2e-test.mjs
types/: index.ts  v2.ts
(+21 files in other folders)
