[project]
name = "talk-talk-vending-backend"
version = "2.0.0"
description = "Therapy sentence generation engine v2"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai-agents>=0.6.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pronouncing>=0.2.0",
    "g2p-en>=2.1.0",
    "hgtk>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
